Removing preventDefault from keys capture and fixing page overflowing
- Now keyboard shortcuts like refreshing the page and opening console works.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background-color: rgb(58, 37, 37);
     width: 100%;
     text-align:center;
-
+    overflow: hidden;
 }
 
 canvas {
